Updated to ws-wallet and ws-identity server
In updated ws-wallet session IDs for the ws-identity server are requested internally
The paths to request session IDs within the utility emissions typescript app
have been dropped.
The WsX509 API keys required by the typescript app are: sessionId, signature and username

In this verison paths for ws-identity (e.g., session/new,identity/sign,identity/get-pub)
can be mounted directly onto the typescript app router.
A docker image of ws-identity is also run as a standalone server on the backend.
