# utility-emissions-channel/typescript_app/swagger.v2-ws.json
@@ -59,25 +59,6 @@
         },
 
         "schemas": {
-            "wsSessionReq" : {
-                "type": "object",
-                "required": ["pubKeyHex"],
-                "properties": {
-                    "pubKeyHex" : {
-                        "type": "string",
-                        "example": "04cc1753fd57368ce8b5805a96e03a10ef6d50c50ed1c121c58bb620ab8afa4c422f310f18fad90522af94f0dbd695e9f32568c9271719b447d71c77cf843d8ed1"
-                    }
-                }
-            },
-            "wsSessionRes" : {
-                "type": "object",
-                "required": ["sessionId"],
-                "properties": {
-                    "sessionId" : {
-                        "type": "string"
-                    }
-                }
-            },
             "registerReq" : {
                 "type": "object",
                 "required": ["enrollmentID","affiliation"],
@@ -237,34 +218,6 @@
     },
 
     "paths": {
-        "/im/web-socket-session-id" : {
-            "post" : {
-                "description": "create a new web socket session-id using external clients pub-key-hex",
-                "summary": "initialize web-socket server for incoming connection",
-                "tags": ["WebSocketSession"],
-                "requestBody":{
-                    "content": {
-                        "application/json" : {
-                            "schema":{
-                                "$ref" : "#/components/schemas/wsSessionReq"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201" : {
-                        "description": "sessionId generated",
-                        "content": {
-                            "application/json":{
-                                "schema" : {
-                                    "$ref" : "#/components/schemas/wsSessionRes"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/utilityemissionchannel/registerEnroll/enroll" : {
             "post" : {
                 "description": "Enrolls a client with fabric ca",
